# cuda-raytracer

./: .gitignore  .x.cu.swp  CMakeLists.txt  README.md  \  a.cpp  a.out  ptx  vector_math.cuh  x.cu
include/glad/: glad.h
include/nlohmann/: json.hpp
src/: cr.cpp  cr.cu  culint.hpp  vmath.hpp
src/core/: .radiance.hpp.swp  allocator.hpp  dev.hpp  factory.hpp  mesh.cpp  mesh.cu  mesh.hpp  poly.hpp  radiance.hpp  random.hpp  ray.hpp  renderer.cpp  renderer.hpp  sampler.hpp  scene.cu  scene.hpp  tracer.hpp
src/core/basic/: .allocator.hpp.swp  .poly.hpp.swo  .poly.hpp.swp  allocator.hpp  basic.hpp  factory.hpp  function.hpp  poly.hpp  queue.hpp  ray.hpp
src/core/basic/poly/: debug.hpp  function.hpp  kernel.hpp  vector.hpp  vectorView.hpp
src/core/device/: bsdf.hpp  hit.hpp  material.hpp  mesh.hpp  scene.hpp
src/core/kernel/: bruteForce.hpp  custom.hpp  halfVector.hpp  kernel.cu  kernel.hpp  kernel.impl.cu  normal.hpp  radiance.cu  radiance.hpp  visibility.hpp
src/core/light/: areaLight.hpp  light.hpp  pointLight.hpp
src/core/meta/: bsdf.hpp  distribution.hpp  input.hpp  interreact.hpp  material.hpp  mesh.cu  mesh.hpp  primitive.hpp  profiler.hpp  scala.hpp  scene.cu  scene.hpp  sphere.hpp  varyings.hpp
src/core/misc/: lens.hpp  lens.impl.cu  random.hpp  sampler.hpp
src/core/nodes/: distribution.hpp  node.hpp  scala.hpp  shader.hpp  target.hpp
src/core/primitive/: mesh.cu  mesh.hpp  primitive.hpp  sphere.hpp
src/core/renderer/: factory.hpp  renderer.cu  renderer.hpp
src/core/tracer/: .cudaSingleGPU.hpp.swp  cpuMulticore.cu  cpuMulticore.hpp  cudaSingleGPU.hpp  hybridTracer.hpp  tracer.hpp  tracer.impl.cu
src/ext/: util.hpp
src/ext/distribution/: beckmann.hpp  cosine.hpp  distribution.impl.cu
src/ext/material/: lambert.cu  lambert.hpp  luz.hpp  material.impl.cu  microfacet.hpp  mixed.hpp  specular.cu  specular.hpp
src/ext/scala/: constant.hpp  fresnel.hpp  scala.impl.cu
src/ext/shader/: blackhole.hpp  emission.hpp  glass.hpp  glossy.hpp  lambert.hpp  mixed.hpp  refraction.hpp  shader.impl.cu  transparent.hpp
src/fallback/: renderer.cpp  renderer.hpp  scene.hpp
src/poly/: kernel.hpp  object.hpp  vector.hpp
src/util/: config.hpp  cstring.hpp  debug.hpp  exception.hpp  glad.c  hemisphere.hpp  image.cpp  image.hpp  jsel.hpp  mesh.cpp  mesh.hpp  ray.hpp  upaxis.hpp
src/vec/: trait.hpp  vec.hpp  vios.hpp  vmath.hpp  vsel.hpp
src/vis/: buffer.hpp  camera.hpp  renderer.cpp  renderer.cu  renderer.hpp  util.hpp  vis.frag  vis.vert
test/: cstring.cu  cyclicQueue.cu  fresnel.cu  intersect.cu  kernel.cu  math.cu  polyObject.cu  polyStruct.cu  polyVector.cu  polyVectorView.cu  scene.cu  sphere.cu
